Fixed before push
Had accidentally just taken along the code from BD's theme edit-section. Now the commit should reflect the original css file

Also fixed the misaligned expanded folder background ->  translateX(50%) to 68% (just a quick workaround)

--- a/BetterDiscordAddons/Themes/modern-discord.theme.source.css
+++ b/BetterDiscordAddons/Themes/modern-discord.theme.source.css
@@ -1,14 +1,3 @@
-/**
- * @name Alexis Modern Discord Theme
- * @author Alexis | WyvernZu#0001
- * @authorLink https://twitter.com/WyvernZu
- * @version 21.07.22
- * @description A decluttered, simple, and modern theme for Discord.
- * @source https://github.com/AlexisJonsson/AlexisJonsson.github.io/tree/master/BetterDiscordAddons/Themes
- * @website https://alexisjonsson.com/
-*/
-
-@import url("https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/UsrBgs.css");
 @import url(https://discord-custom-covers.github.io/usrbg/dist/usrbg.css);:root{
     --theme-version:"21.10.08a (hotfix) "
 }
@@ -562,7 +551,7 @@
 }
 
 #app-mount .guilds-1SWlCJ [class*=expandedFolderBackground]{
-    width:var(--server-size);left:50%;border-radius:calc(var(--server-size)/ 2);transform:translateX(-50%)
+    width:var(--server-size);left:50%;border-radius:calc(var(--server-size)/ 2);transform:translateX(-68%)
 }
 
 #app-mount .guilds-1SWlCJ .folder-21wGz3{
@@ -8556,24 +8545,3 @@ html:not(.app-focused) .sidebarRegionScroller-3MXcoP{
 .container-3w7J-x[aria-label*="Chokepoint Games"] [aria-label*="Internalized Memes"]:after{
     --cat-bg:url(https://i.imgur.com/hdzXiuU.jpg)
 }
-
-
-
-:root {
-
-    /*My Account Button*/
-    --username-button-width: 128px; /* Adjust the with of the username button to match your discord username lenght */
-    --username-button-padding: 6px; /* Padding for the username button */
-    --username-button-right-margin: 12px; /* Width between the username button and the window controls */
-
-    /*Server List*/
-    --server-icon-size: 32px;  /* Size of the server icons */
-    --server-outer-margin: 14px;  /* Spacing between the edge of the container and the server icons.*/
-    --server-spacing: 10px;  /* Spacing between each server icon*/
-
-    /*Server Info Bar*/
-    --app-info-bar-height: 48px; /* Height for container that holds the server name, info, actions and search */
-
-}
-
-
